force-app/main/default/objects/Git_Hosting_Service__mdt/Git_Hosting_Service__mdt.object-meta.xml
<CustomObject>
    <label>Git Hosting Service</label>
    <pluralLabel>Git Hosting Services</pluralLabel>
</CustomObject>