force-app/main/default/objects/Git_Hosting_Service__mdt/fields/Get_Team_Repos_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Get_Team_Repos_Endpoint__c</fullName>
    <label>Get Team Repos Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>