force-app/main/default/objects/Git_Hosting_Service__mdt/fields/Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Name__c</fullName>
    <label>Named Credential Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>