force-app/main/default/objects/Git_Hosting_Service__mdt/fields/Page_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Page_Parameter__c</fullName>
    <label>Page Parameter</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>