force-app/main/default/objects/Git_Hosting_Service__mdt/listViews/All_Complete.listView-meta.xml
<ListView>
    <fullName>All_Complete</fullName>
    <columns>MasterLabel</columns>
    <columns>Named_Credential_Name__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>Get_Repos_Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Complete</label>
</ListView>